--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "nodemon backend/index.js"
   },
+  "engines": {
+  "node": ">=18.0.0"
+},
 
   "keywords": [],
   "author": "",
