--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "start": "nodemon backend/index.js"
   },
   "engines": {
-  "node": ">=18.0.0"
-},
-
+    "node": ">=18.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -26,6 +25,7 @@
     "express": "4.21.2",
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "6.12.0",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
